# support-bot

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/support_bot/: asgi.py  celery.py  pagination.py  settings.py  urls.py  wsgi.py
backend/ticket/: models.py  serializers.py  urls.py  views.py
backend/ticket/migrations/: 0001_initial.py  0002_initial.py
backend/user/: authentication.py  models.py  serializers.py
backend/user/migrations/: 0001_initial.py
bot/: Dockerfile  main.py  pyproject.toml  settings.py  states.py  test.py  texts.py
bot/api/: bot_api.py  client.py  models.py
bot/celery_worker/: app.py  tasks.py
bot/core/api/: client.py  endpoint.py
bot/core/utils/: utils.py
bot/dialogs/: dialogs.py
bot/handlers/: handlers.py  start.py
